@@ -1,3 +1,7 @@
+2007-12-26  Eric S. Raymond  <esr@snark.thyrsus.com>
+
+	* Add Subversion and Mercurial log format samples
+
 2007-12-26  Andreas Schwab  <schwab@suse.de>
 
 	* font-lock.el (save-buffer-state): Make sure the state of the
